<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <Button 
        android:id="@+id/button01_2"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:text="@string/a01_btn01"
        />
    <Button 
        android:id="@+id/button01_3"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:text="@string/a01_btn02"
        />
    <Button 
        android:id="@+id/button01_23"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:text="@string/a01_btn03"
        />
</LinearLayout>
