<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <Button 
        android:id="@+id/button02_1"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:text="@string/a02_btn01"
        />
     <Button 
        android:id="@+id/button02_3"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:text="@string/a02_btn02"
        />
      <Button 
        android:id="@+id/button02_13"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:text="@string/a02_btn03"
        />
</LinearLayout>
