<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <Button 
        android:id="@+id/button03_1"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:text="@string/a03_btn01"
        />
     <Button 
        android:id="@+id/button03_2"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:text="@string/a03_btn02"
        />
      <Button 
        android:id="@+id/button03_12"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:text="@string/a03_btn03"
        />
</LinearLayout>
