<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button 
        android:id="@+id/button01_2"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:text="@string/a01_btn01"
        />
    <Button 
        android:id="@+id/button01_3"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:text="@string/a01_btn02"
        />
    <Button 
        android:id="@+id/button01_23"
        android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
        android:text="@string/a01_btn03"
        />
</LinearLayout>
      <ListView
        android:id="@+id/listView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>
    

</LinearLayout>
